--- a/ramdisk/init.cardhu.rc
+++ b/ramdisk/init.cardhu.rc
@@ -109,6 +109,8 @@ on boot
     chown system system /sys/module/cpu_tegra/parameters/pwr_cap_limit_2
     chown system system /sys/module/cpu_tegra/parameters/pwr_cap_limit_3
     chown system system /sys/module/cpu_tegra/parameters/pwr_cap_limit_4
+    chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
+    chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
 
 # Sensor
     chown system system /sys/bus/iio/devices/device0/als_ir_mode
